Allow multiple selection in file view

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -960,7 +960,7 @@
         { FileView1 FileView
           MoveScaled(1,13,35,32)
           Expand = True
-          Mode = Select.Single
+          Mode = Select.Multiple
           Dir = "/"
           ShowDetailed = True
           ShowDirectory = True
