Give tracking to controlframe picturebox solve stuck mouse button issue (i think it is a gambas bug)

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1779,6 +1779,7 @@
           Font = Font["6"]
           { PictureBox1 PictureBox
             MoveScaled(9,1,60,7)
+            Tracking = True
             Drop = True
             Expand = True
             Picture = Picture["backpanel.png"]
