--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -644,10 +644,10 @@
           }
         }
         { NOPARSESEP7 Separator
-          MoveScaled(2,33,45,2)
+          MoveScaled(2,32,45,2)
         }
         { NoParse33 HBox
-          MoveScaled(1,35,50,4)
+          MoveScaled(2,34,50,4)
           ToolTip = ("When playing youtube videos, \nprefer this format if available.")
           Spacing = True
           { Label10 Label labelcheck
@@ -663,8 +663,18 @@
             Text = ("360p")
           }
         }
+        { NoParse52 HBox
+          MoveScaled(2,39,51,5)
+          ToolTip = ("Seeking on youtube streams may be problematic.\nChecking this will cause mplayer to be restarted at the new position \ninstead of issuing a seek.\nThis may or not work better for you.")
+          Spacing = True
+          { DoSeekRestartBox CheckBox
+            MoveScaled(0,0,49,4)
+            Expand = True
+            Text = ("Restart youtube stream instead of seeking")
+          }
+        }
         { NoParse35 HBox
-          MoveScaled(1,40,50,4)
+          MoveScaled(2,46,50,4)
           ToolTip = ("Choose how to download network streams\nsuch as youtube video and podcasts.\nkde4 - choose kioclient ; \nkde3 - choose kfmclient ; \nIf you wish to write your own downloader, \nremember that\n%url is the stream to download\n%destdir is the destination directory\n%destfile is the destination file (without the path)\n\nNote then kioclient and kfmclient do not work with youtubeì streams.")
           Spacing = True
           { Label13 Label labelcheck
@@ -681,7 +691,7 @@
           }
         }
         { NOPARSESEP5 Separator
-          MoveScaled(4,45,44,2)
+          MoveScaled(4,50,44,2)
         }
       }
       Index = 7
