Workaround to avoid stuck mouse buttons

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1763,6 +1763,7 @@
           Name = "VideoBox"
           MoveScaled(1,10,24,14)
           Background = &H000000&
+          Tracking = True
           Drop = True
         }
       }
