Fixed fullscreen handling when xt7 is embedded

--- a/.src/Form/FsForm.form
+++ b/.src/Form/FsForm.form
@@ -2,6 +2,8 @@
 
 { Form Form
   MoveScaled(0,0,64,64)
+  Background = &H000000&
+  Border = False
   SkipTaskbar = True
   Arrangement = Arrange.Vertical
 }
