--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1554,6 +1554,7 @@
       Name = "RightSidePanel"
       MoveScaled(42,5,60,65)
       Background = Color.Background
+      Tracking = True
       Arrangement = Arrange.Vertical
       { timerpluginmode #Timer
         #MoveScaled(0,1)
