--- a/.src/Form/CoverManager.form
+++ b/.src/Form/CoverManager.form
@@ -99,7 +99,7 @@
       }
     }
     { HBox2 HBox
-      MoveScaled(2,66,84,4)
+      MoveScaled(2,66,89,4)
       Spacing = True
       { ButtonUnset Button
         MoveScaled(1,0,15,4)
@@ -107,21 +107,26 @@
         Picture = Picture["icon:/16/delete"]
       }
       { ButtonLoad Button
-        MoveScaled(17,0,17,4)
+        MoveScaled(16,0,17,4)
         Text = ("Load cover")
         Picture = Picture["icon:/16/open"]
       }
       { HBox3 HBox
-        MoveScaled(36,1,14,3)
+        MoveScaled(34,0,4,3)
         Expand = True
       }
+      { ComboBox1 ComboBox
+        MoveScaled(40,0,16,4)
+        ReadOnly = True
+        List = [("Don't Scale"), ("640"), ("480"), ("320"), ("240"), ("160"), ("128")]
+      }
       { ButtonAccept Button
-        MoveScaled(51,0,15,4)
+        MoveScaled(58,0,15,4)
         Text = ("Set Cover")
         Picture = Picture["icon:/16/apply"]
       }
       { ButtonCancel Button
-        MoveScaled(68,0,14,4)
+        MoveScaled(74,0,14,4)
         Text = ("Close")
         Picture = Picture["icon:/16/cancel"]
       }
