--- a/.src/Form/zzzFake.form
+++ b/.src/Form/zzzFake.form
@@ -11,7 +11,7 @@
   SkipTaskbar = True
   Opacity = 0
   { VSplit1 VSplit
-    MoveScaled(3,2,12,9)
+    MoveScaled(4,2,12,9)
     Expand = True
   }
   { ScrollView1 ScrollView
@@ -190,7 +190,13 @@
     }
   }
   { PanelMini Panel
-    MoveScaled(19,2,15,16)
+    MoveScaled(20,2,15,16)
     Arrangement = Arrange.Fill
+  }
+  { cachingbox MovieBox
+    MoveScaled(51,4,16,16)
+    Background = &H000000&
+    Path = "caching.gif"
+    Playing = True
   }
 }
