--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -786,7 +786,7 @@
           Border = Border.Etched
         }
         { MyLibraryProgressBar ProgressBar
-          MoveScaled(0,51,38,4)
+          MoveScaled(0,52,38,3)
           Visible = False
         }
         Index = 1
@@ -1552,7 +1552,7 @@
     }
     { RightSidePanel Panel VideoAreaGroup
       Name = "RightSidePanel"
-      MoveScaled(43,5,60,65)
+      MoveScaled(42,5,60,65)
       Background = Color.Background
       Tracking = True
       Arrangement = Arrange.Vertical
@@ -1772,18 +1772,10 @@
         }
       }
       { BottomVbox VBox
-        MoveScaled(-4,48,71,15)
+        MoveScaled(-4,48,71,14)
         Background = Color.Background
-        { cachebar HBox
-          MoveScaled(4,2,60,1)
-          Background = &H000000&
-          { cachegauge Panel
-            MoveScaled(0,0,50,1)
-            Background = Color.SelectedBackground
-          }
-        }
         { ControlFrame Frame
-          MoveScaled(1,3,70,10)
+          MoveScaled(0,3,70,10)
           Font = Font["6"]
           { PictureBox1 PictureBox
             MoveScaled(8,1,60,7)
@@ -1893,12 +1885,17 @@
           }
         }
         { statusbar1 Label
-          MoveScaled(12,12,41,2)
+          MoveScaled(4,12,41,2)
           Font = Font["Bold,-1"]
           Background = &H000000&
           Foreground = &HFFFFFF&
           Alignment = Align.Left
         }
+      }
+      { cachebar HBox
+        MoveScaled(0,46,60,1)
+        Background = Color.SelectedBackground
+        Ignore = True
       }
     }
     { TimerQuit #Timer
