--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1907,6 +1907,7 @@
     }
     { OneSecTimer #Timer
       #MoveScaled(65,0)
+      Delay = 500
     }
     { TimerDVD #Timer
       #MoveScaled(72,0)
