--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1767,13 +1767,13 @@
         }
       }
       { BottomVbox VBox
-        MoveScaled(-4,48,71,14)
+        MoveScaled(0,48,71,14)
         Background = Color.Background
         { ControlFrame Frame
-          MoveScaled(0,3,70,10)
+          MoveScaled(1,3,70,10)
           Font = Font["6"]
           { PictureBox1 PictureBox
-            MoveScaled(8,1,60,7)
+            MoveScaled(1,1,60,7)
             Tracking = True
             Drop = True
             Expand = True
@@ -1781,7 +1781,7 @@
             Stretch = True
           }
           { ControlPanel Panel
-            MoveScaled(20,6,43,4)
+            MoveScaled(9,6,43,4)
             Font = Font["6"]
             AutoResize = True
             { ButtonOpen ToolButton
@@ -1852,7 +1852,7 @@
             }
           }
           { SliderBox HBox
-            MoveScaled(12,2,57,4)
+            MoveScaled(4,2,57,4)
             Font = Font["6"]
             { SeekBar Slider
               MoveScaled(3,0,25,4)
@@ -1887,10 +1887,12 @@
           Alignment = Align.Left
         }
       }
-      { cachebar HBox
-        MoveScaled(0,46,60,1)
-        Background = Color.SelectedBackground
+      { cachebar PictureBox
+        MoveScaled(0,49,58,1)
+        Background = Color.Background
         Ignore = True
+        Picture = Picture["cachebar.png"]
+        Stretch = True
       }
     }
     { TimerQuit #Timer
