Give video area tracking

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1760,8 +1760,9 @@
         Expand = True
         { VideoBox DrawingArea VideoAreaGroup
           Name = "VideoBox"
-          MoveScaled(1,9,24,14)
+          MoveScaled(2,10,24,14)
           Background = &H000000&
+          Tracking = True
           Drop = True
         }
       }
