Audio meters display is 4x faster

--- a/.src/Form/AudioForm.form
+++ b/.src/Form/AudioForm.form
@@ -361,7 +361,7 @@
     { PictureBox1 PictureBox AudioAreaGroup
       Name = "PictureBox1"
       Move(28,427,231,63)
-      Background = &H000000&
+      Background = &HFFFFFF&
       Tracking = True
       Drop = True
       Expand = True
