--- a/.src/Form/XConfigureAudioDriver.form
+++ b/.src/Form/XConfigureAudioDriver.form
@@ -7,6 +7,8 @@
   Icon = Picture["speaker.png"]
   Persistent = True
   Arrangement = Arrange.Vertical
+  Spacing = True
+  Margin = True
   Padding = 6
   { MenuProfile Menu
     Text = ("Profile")
@@ -329,8 +331,10 @@
     }
   }
   { Label6 Label
-    MoveScaled(0,57,68,4)
+    MoveScaled(1,58,68,3)
     Foreground = &H646464&
+    Padding = 6
+    AutoResize = True
     Text = ("Drivers are choosed from top to bottom, drag'n drop them to choose priority.")
     Alignment = Align.Left
   }
