--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -768,6 +768,7 @@
           { shadeup PictureBox shadeuplow
             Name = "shadeup"
             MoveScaled(1,12,31,2)
+            Visible = False
             Ignore = True
             Picture = Picture["shadeup.png"]
             Stretch = True
